Replace the use of Stream.of for single items
(and convert the rest of those files)