@@ -4,8 +4,6 @@ import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.annotation.WorkerThread;
 
-import com.annimon.stream.Stream;
-
 import org.signal.core.util.logging.Log;
 import org.thoughtcrime.securesms.database.SignalDatabase;
 import org.thoughtcrime.securesms.jobmanager.Job;
@@ -30,6 +28,8 @@ import org.whispersystems.signalservice.api.push.exceptions.ServerRejectedExcept
 import java.io.IOException;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class ProfileKeySendJob extends BaseJob {
 
@@ -92,11 +92,13 @@ public class ProfileKeySendJob extends BaseJob {
       throw new AssertionError("Do not send profile keys directly for GV2");
     }
 
-    List<RecipientId> recipients = conversationRecipient.isGroup() ? Stream.of(RecipientUtil.getEligibleForSending(Recipient.resolvedList(conversationRecipient.getParticipantIds())))
-                                                                           .map(Recipient::getId)
-                                                                           .toList()
-                                                                   : Stream.of(conversationRecipient.getId())
-                                                                           .toList();
+    List<RecipientId> recipients = conversationRecipient.isGroup()
+                                   ? RecipientUtil.getEligibleForSending(Recipient.resolvedList(conversationRecipient.getParticipantIds()))
+                                                  .stream()
+                                                  .map(Recipient::getId)
+                                                  .collect(Collectors.toList())
+                                   : Stream.of(conversationRecipient.getId())
+                                           .collect(Collectors.toList());
 
     recipients.remove(Recipient.self().getId());
 
@@ -142,7 +144,7 @@ public class ProfileKeySendJob extends BaseJob {
       }
     }
 
-    List<Recipient> destinations = Stream.of(recipients).map(Recipient::resolved).toList();
+    List<Recipient> destinations = recipients.stream().map(Recipient::resolved).collect(Collectors.toList());
     List<Recipient> completions  = deliver(destinations);
 
     for (Recipient completion : completions) {
@@ -195,7 +197,7 @@ public class ProfileKeySendJob extends BaseJob {
                                                                            .withProfileKey(Recipient.self().resolve().getProfileKey());
 
     List<SendMessageResult>    results       = GroupSendUtil.sendUnresendableDataMessage(context, null, destinations, false, ContentHint.IMPLICIT, dataMessage.build(), false, null);
-    ProofRequiredException     proofRequired = Stream.of(results).filter(r -> r.getProofRequiredFailure() != null).reduce((a,b) -> b).map(SendMessageResult::getProofRequiredFailure).orElse(null);
+    ProofRequiredException     proofRequired = results.stream().filter(r -> r.getProofRequiredFailure() != null).reduce((a,b) -> b).map(SendMessageResult::getProofRequiredFailure).orElse(null);
 
     GroupSendJobHelper.SendResult groupResult = GroupSendJobHelper.getCompletedSends(destinations, results);
 
